--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,12 @@
 body {
     font-family: "Roboto", sans-serif;
     color:#434455;;
-    background-color: #F4F4FD;
+    background-color: #FFFFFF;
     font-style: normal;
 }
 
 .logo {
-font-family: Raleway;
+font-family: Raleway, sans-serif;
 font-size: 18px;
 font-weight: 700;
 line-height: 116.667%;
