--- a/css/styles.css
+++ b/css/styles.css
@@ -10,19 +10,15 @@ body {
 font-family: Raleway, sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 116.667%;
-letter-spacing: 3%;
+line-height: 1.17;
+letter-spacing: 0.03em;
 text-transform: uppercase;
 text-decoration: none;
-
-}
-
-.logo-web-part {
-    color: #4D5AE5;
+color: #4d5ae5;
 }
 
 .logo-studio-part {
-    color:#2E2F42;
+    color: #2e2f42;
 }
 
 .page-menu {
