--- a/css/styles.css
+++ b/css/styles.css
@@ -30,26 +30,31 @@ color:#2E2F42;
 font-size: 16px;
 font-weight: 500;
 line-height: 150%;
-letter-spacing: 2%;
+letter-spacing: 0.02em;
 text-decoration: none;
 }
 
-.page-menu-list:active, .page-menu-list:hover {
-    color: #404BBF;
+.page-menu-list:active, .page-menu-list:hover .page-menu-list:focus {
+    color: #404bbf;
     text-decoration: underline;
 
 } 
+
+.adress {
+    font-style: normal;
+}
 
 .page-menu-contacts {
 color: #434455;
 font-size: 16px;
 font-weight: 400;
 line-height: 150%;
-letter-spacing: 2%;
+letter-spacing: 0.02em;
 text-decoration: none;
+
 }
 
-.page-menu-contacts:active, .page-menu-contacts:hover {
+.page-menu-contacts:active, .page-menu-contacts:hover, .page-menu-contacts:focus {
 color: #404BBF;
 }
 
@@ -63,7 +68,7 @@ text-align: center;
 font-size: 56px;
 font-weight: 700;
 line-height: 107.143%;
-letter-spacing: 2%;
+letter-spacing: 0.02em;
 }
 
 .border-servise-button {
@@ -80,7 +85,7 @@ text-align: center;
 font-size: 56px;
 font-weight: 700;
 line-height: 107.143%;
-letter-spacing: 2%;
+letter-spacing: 0.02em;
 }
 
 .advantages-list {
@@ -92,7 +97,7 @@ color:#2E2F42;
 font-size: 20px;
 font-weight: 500;
 line-height: 120%;
-letter-spacing: 2%;
+letter-spacing: 0.02em;
 }
 
 .advantages-list-txt {
@@ -100,5 +105,5 @@ color:#434455;
 font-size: 16px;
 font-weight: 400;
 line-height: 150%;
-letter-spacing: 2%;
+letter-spacing:0.02em;
 }
