--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,29 @@ font-weight: 400;
 line-height: 150%;
 letter-spacing:0.02em;
 }
+
+.our-team-section {
+    background-color: #F4F4FD;
+}
+
+.our-team-header {
+    color:#2E2F42;
+text-align: center;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+}
+
+.our-team-cards {
+    background-color: #FFFFFF;
+
+}
+
+.our-team-txt {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    
+}
