--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ body {
     font-style: normal;
 }
 
+/** header **/
+
 .logo {
 font-family: Raleway, sans-serif;
 font-size: 18px;
@@ -56,6 +58,8 @@ text-decoration: none;
 color: #404BBF;
 }
 
+/** section 1 **/
+
 .main-section-one {
     background-color: #2E2F42;
 }
@@ -82,6 +86,7 @@ cursor: pointer;
 background:#404BBF;
 }
 
+/** section 2 **/
 
 .advantages-list {
     list-style: none;
@@ -102,6 +107,8 @@ font-weight: 400;
 line-height: 150%;
 letter-spacing:0.02em;
 }
+
+/** section 3 **/
 
 .our-team-section {
     background-color: #F4F4FD;
@@ -129,6 +136,8 @@ text-transform: capitalize;
 
 }
 
+/** section 4 **/
+
 .product-name {
     font-weight: 500;
     font-size: 20px;
@@ -142,5 +151,12 @@ text-transform: capitalize;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+
+}
+
+/** footer **/
+
+.footer-section {
+    background-color: #2e2f42;
     
 }
